--- a/MOOCProject/src/main/resources/application.properties
+++ b/MOOCProject/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #datasource
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/employee
 spring.datasource.username=root
 spring.datasource.password=
