--- a/MOOCProject/src/main/resources/application.properties
+++ b/MOOCProject/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #datasource
-spring.jpa.hibernate.ddl-auto=update
+jwt.secret=javainuse
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/employee
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
